--- a/index.html
+++ b/index.html
@@ -21,37 +21,38 @@
           <div class="profile">
             <img class="mypic" src="images/newimg.jpg" alt="myimg">
             <h2>Hello.</h2>
-            <p class="intro">I am an Android and Web Developer. I'm a coffee lover and I like playing games.</p>
+            <p class="intro">I am an Android and a Web Developer. I'm a coffee lover and I like playing games.</p>
           </div>
           <hr>
           <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-              <img class="computer" src="images/computer.png" alt="comp">
+              <img class="computer" src="images/design.jpg" alt="comp">
 
-              <h3>Design & Development</h3>
-              <p>My interest in coding came from playing games. I felt like I have to learn coding and develop my own things.</p>
+              <h3>Design</h3>
+              <p>On the Frontend part, I have experience in using CSS3, JavaScript ES6, Bootstrap 4, XML(Android Studio) &amp; Wordpress. I also use Photoshop to design websites.</p>
             </div>
             <div class="skill-row">
-              <img class="chillies" src="images/game.png" alt="chilli">
+              <img class="chillies" src="images/computer.png" alt="chilli">
 
-              <h3>Gaming</h3>
-              <p>I am a big fan of playing games, so if you want to hangout and play games feel free to contact me at any time :)</p>
+              <h3>Development</h3>
+              <p>On the Backend side, I use jQuery, PHP &amp; MySQL(to store data) for websites and Java for developing Android applications. </p>
             </div>
           </div>
           <hr>
           <div class="contact-me">
             <h2>Get In Touch</h2>
-            <p class="contact-message">Love development as much as I do? Let's talk about it while we have a cup of coffee!</p>
-            </p>
+            <p class="contact-message">Love Design &amp; Development as much as I do? Let's talk about it while we have a cup of coffee!</p>
             <a class="btn" href="mailto:atharva03kulkarni@gmail.com">CONTACT ME</a>
           </div>
         </div>
 
 
         <div class="bottom-container">
-          <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-          <a class="footer-link" href="https://twitter.com/">Twitter</a>
+          <a class="footer-link" href="https://www.linkedin.com/in/atharva-kulkarni-484101174/">LinkedIn</a>
+          <a class="footer-link" href="https://twitter.com/Atharva29208816/">Twitter</a>
+          <a class="footer-link" href="https://github.com/atharva03kulkarni/">Github</a>
+        
           <p class="copyright">© 2020 Atharva Kulkarni.</p>
         </div>
 
