--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
               <img class="computer" src="images/design.jpg" alt="comp">
 
               <h3>Design</h3>
-              <p>On the Frontend part, I have experience in using CSS3, JavaScript ES6, Bootstrap 4, XML(Android Studio) &amp; Wordpress. I also use Photoshop to design websites.</p>
+              <p>On the Frontend part, I have experience in using CSS3, JavaScript ES6, Bootstrap 4, ReactJS, XML(Android Studio) &amp; Wordpress. I also use Photoshop to design websites.</p>
             </div>
             <div class="skill-row">
               <img class="chillies" src="images/computer.png" alt="chilli">
 
               <h3>Development</h3>
-              <p>On the Backend side, I use jQuery, PHP &amp; MySQL(to store data) for websites and Java for developing Android applications. </p>
+              <p>On the Backend side, I use jQuery, PHP, NodeJS &amp; MySQL/MongoDB(to store data) for websites and Java for developing Android applications. </p>
             </div>
           </div>
           <hr>
